src/test/deca/syntax/invalid/extension/TabSansNom.deca
// missing IDENT at '='
// Description:
//    Tableau sans nom
//

{
    int[] = {1, 2, 3};
}